# Veloxloop

./: Cargo.toml  README.md  pyproject.toml  pytest.ini
.github/workflows/: check.yml  release.yml  test.yml
benchmarks/: README.md  check_deps.py  client.py  render.py  run.py  server.py  test_setup.py
benchmarks/templates/: _vs_table.tpl  _vs_table_overw.tpl  main.md  stream_proto.md
src/: callbacks.rs  concurrent.rs  constants.rs  epoll.rs  event_loop.rs  executor.rs  ffi_utils.rs  handles.rs  lib.rs  policy.rs  poller.rs  socket.rs  streams.rs  timers.rs  utils.rs
src/event_loop/: callbacks.rs  executor.rs  io.rs  lifecycle.rs  mod.rs  network.rs  poll.rs
src/io_backend/: mod.rs  ops.rs  poll_backend.rs  traits.rs  unified.rs  uring.rs
src/transports/: future.rs  mod.rs  ssl.rs  stream_server.rs  tcp.rs  udp.rs
tests/: compare_cross_thread.py  compare_cross_thread_fixed.py  debug_cross_thread.py  debug_detailed.py  test_basic.py  test_core_basic.py  test_core_features.py  test_core_polling.py  test_cross_thread.py  test_dns.py  test_minimal_cross_thread.py  test_sendfile.py  test_socket_options.py  test_ssl.py  test_streams.py  test_tcp_transport.py  test_timers.py  test_transport_methods.py  test_udp.py  test_zerocopy_perf.py
veloxloop/: __init__.py
